--- a/python2verilog.html
+++ b/python2verilog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>python2verilog package &#8212; Python2Verilog  documentation</title>
+    <title>python2verilog package &#8212; python2verilog  documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=b3523f8e" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css?v=039e1c02" />
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js?v=b3ba4146"></script>
@@ -14,7 +14,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="python2verilog.backend package" href="python2verilog.backend.html" />
-    <link rel="prev" title="Welcome to Python2Verilog’s documentation!" href="index.html" />
+    <link rel="prev" title="Welcome to python2verilog’s documentation!" href="index.html" />
    
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
   
@@ -294,7 +294,7 @@
       </div>
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
-<h1 class="logo"><a href="index.html">Python2Verilog</a></h1>
+<h1 class="logo"><a href="index.html">python2verilog</a></h1>
 
 
 
@@ -330,7 +330,7 @@
 <h3>Related Topics</h3>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="index.html" title="previous chapter">Welcome to Python2Verilog’s documentation!</a></li>
+      <li>Previous: <a href="index.html" title="previous chapter">Welcome to python2verilog’s documentation!</a></li>
       <li>Next: <a href="python2verilog.backend.html" title="next chapter">python2verilog.backend package</a></li>
   </ul></li>
 </ul>
