--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search &#8212; Python2Verilog  documentation</title>
+    <title>Search &#8212; python2verilog  documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=b3523f8e" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css?v=039e1c02" />
     
@@ -71,7 +71,7 @@
       </div>
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
-<h1 class="logo"><a href="index.html">Python2Verilog</a></h1>
+<h1 class="logo"><a href="index.html">python2verilog</a></h1>
 
 
 
