--- a/_modules/python2verilog/convert.html
+++ b/_modules/python2verilog/convert.html
@@ -64,6 +64,12 @@
     <span class="k">return</span> <span class="n">CodeGen</span><span class="o">.</span><span class="n">from_graph_ir</span><span class="p">(</span><span class="n">ir</span><span class="p">,</span> <span class="n">context</span><span class="p">)</span></div>
 
 
+<div class="viewcode-block" id="list_templates"><a class="viewcode-back" href="../../python2verilog.html#python2verilog.convert.list_templates">[docs]</a><span class="k">def</span> <span class="nf">list_templates</span><span class="p">():</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Lists the templates found</span>
+<span class="sd">    &quot;&quot;&quot;</span></div>
+
+
 <span class="k">if</span> <span class="vm">__name__</span> <span class="o">==</span> <span class="s2">&quot;__main__&quot;</span><span class="p">:</span>
     <span class="n">parser</span> <span class="o">=</span> <span class="n">argparse</span><span class="o">.</span><span class="n">ArgumentParser</span><span class="p">(</span>
         <span class="n">description</span><span class="o">=</span><span class="vm">__doc__</span><span class="p">,</span> <span class="n">formatter_class</span><span class="o">=</span><span class="n">argparse</span><span class="o">.</span><span class="n">RawTextHelpFormatter</span>
@@ -133,7 +139,7 @@
         <span class="n">tree</span> <span class="o">=</span> <span class="n">ast</span><span class="o">.</span><span class="n">parse</span><span class="p">(</span><span class="n">python</span><span class="p">)</span>
         <span class="n">function</span> <span class="o">=</span> <span class="n">tree</span><span class="o">.</span><span class="n">body</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
         <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">function</span><span class="p">,</span> <span class="n">ast</span><span class="o">.</span><span class="n">FunctionDef</span><span class="p">)</span>
-        <span class="n">verilog</span> <span class="o">=</span> <span class="n">convert_list</span><span class="p">(</span><span class="n">function</span><span class="p">,</span> <span class="n">args</span><span class="o">.</span><span class="n">optimization_level</span><span class="p">)</span>
+        <span class="n">verilog</span> <span class="o">=</span> <span class="n">convert_graph</span><span class="p">(</span><span class="n">function</span><span class="p">,</span> <span class="n">args</span><span class="o">.</span><span class="n">optimization_level</span><span class="p">)</span>
 
         <span class="k">with</span> <span class="nb">open</span><span class="p">(</span>
             <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">abspath</span><span class="p">(</span><span class="n">args</span><span class="o">.</span><span class="n">output</span><span class="p">),</span> <span class="n">mode</span><span class="o">=</span><span class="s2">&quot;w+&quot;</span><span class="p">,</span> <span class="n">encoding</span><span class="o">=</span><span class="s2">&quot;utf8&quot;</span>
