--- a/_modules/python2verilog/optimizer/graph.html
+++ b/_modules/python2verilog/optimizer/graph.html
@@ -112,6 +112,19 @@
 <div class="viewcode-block" id="OptimizeGraph"><a class="viewcode-back" href="../../../python2verilog.optimizer.html#python2verilog.optimizer.graph.OptimizeGraph">[docs]</a><span class="k">class</span> <span class="nc">OptimizeGraph</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    A closure for the graph optimizer</span>
+
+<span class="sd">    `threshold` (an integer &gt;= 0) tunes</span>
+<span class="sd">    how much an algorithm can be unrolled and duplicated</span>
+
+<span class="sd">    A larger `threshold` will result in a reduction in clock cycles,</span>
+<span class="sd">    but an increase in hardware usage</span>
+
+<span class="sd">    If a python generator function generates all of its outputs in O(n) time:</span>
+
+<span class="sd">        1) hardware optimized with `threshold=0` completes in O(n) cycles</span>
+
+<span class="sd">        2) hardware optimized with `threshold=x` for `x &gt; 0` completes in O(n/(x+1)) cycles</span>
+
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">root</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Element</span><span class="p">,</span> <span class="n">threshold</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">):</span>
