deploy: 0cc42ed2dcf322d302acd7619ee8b2ce47619a53

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -29,16 +29,15 @@
           <div class="body" role="main">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="python2verilog/backend/verilog/ast.html">python2verilog.backend.verilog.ast</a></li>
+<ul><li><a href="python2verilog/api/api.html">python2verilog.api.api</a></li>
+<li><a href="python2verilog/backend/verilog/ast.html">python2verilog.backend.verilog.ast</a></li>
 <li><a href="python2verilog/backend/verilog/codegen.html">python2verilog.backend.verilog.codegen</a></li>
-<li><a href="python2verilog/convert.html">python2verilog.convert</a></li>
 <li><a href="python2verilog/frontend/generator2graph.html">python2verilog.frontend.generator2graph</a></li>
 <li><a href="python2verilog/frontend/generator_parser.html">python2verilog.frontend.generator_parser</a></li>
 <li><a href="python2verilog/ir/context.html">python2verilog.ir.context</a></li>
 <li><a href="python2verilog/ir/expressions.html">python2verilog.ir.expressions</a></li>
 <li><a href="python2verilog/ir/graph.html">python2verilog.ir.graph</a></li>
 <li><a href="python2verilog/ir/statements.html">python2verilog.ir.statements</a></li>
-<li><a href="python2verilog/optimizer/basic.html">python2verilog.optimizer.basic</a></li>
 <li><a href="python2verilog/optimizer/graph.html">python2verilog.optimizer.graph</a></li>
 <li><a href="python2verilog/utils/assertions.html">python2verilog.utils.assertions</a></li>
 <li><a href="python2verilog/utils/string.html">python2verilog.utils.string</a></li>
