--- a/genindex.html
+++ b/genindex.html
@@ -139,11 +139,9 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.ClockedEdge">ClockedEdge (class in python2verilog.ir.graph)</a>
 </li>
-      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen">CodeGen (class in python2verilog.backend.verilog.codegen)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.basic.combine_cases">combine_cases() (in module python2verilog.optimizer.basic)</a>
+      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen">CodeGen (class in python2verilog.backend.verilog.codegen)</a>
 </li>
       <li><a href="python2verilog.utils.html#python2verilog.utils.string.Lines.concat">concat() (Lines method)</a>
 </li>
@@ -153,9 +151,9 @@
 </li>
       <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2graph.Generator2Graph.context">context (Generator2Graph property)</a>
 </li>
-      <li><a href="python2verilog.html#python2verilog.convert.convert_graph">convert_graph() (in module python2verilog.convert)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.api.convert_graph">convert_graph() (in module python2verilog.api.api)</a>
 </li>
-      <li><a href="python2verilog.html#python2verilog.convert.convert_list">convert_list() (in module python2verilog.convert)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.api.convert_graph_debug">convert_graph_debug() (in module python2verilog.api.api)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.create_cytoscape_elements">create_cytoscape_elements() (in module python2verilog.ir.graph)</a>
 </li>
@@ -209,11 +207,9 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.IfElseNode.false_edge">false_edge (IfElseNode property)</a>
 </li>
-      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.from_graph_ir">from_graph_ir() (CodeGen class method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.from_list_ir">from_list_ir() (CodeGen class method)</a>
+      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.from_graph_ir">from_graph_ir() (CodeGen class method)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.from_optimal_ir">from_optimal_ir() (CodeGen class method)</a>
 </li>
@@ -241,16 +237,12 @@
 </li>
       <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator_parser.Generator2List.get_context">get_context() (Generator2List method)</a>
 </li>
-      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.basic.get_idx_with_state_name">get_idx_with_state_name() (in module python2verilog.optimizer.basic)</a>
-</li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Statement.get_inline_comment">get_inline_comment() (Statement method)</a>
 </li>
-      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.basic.get_last_state_sub_name">get_last_state_sub_name() (in module python2verilog.optimizer.basic)</a>
+      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_lines">get_module_lines() (CodeGen method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_lines">get_module_lines() (CodeGen method)</a>
-</li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_str">get_module_str() (CodeGen method)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Edge.get_name">get_name() (Edge method)</a>
@@ -351,6 +343,10 @@
       <ul>
         <li><a href="python2verilog.html#module-python2verilog">python2verilog</a>
 </li>
+        <li><a href="python2verilog.api.html#module-python2verilog.api">python2verilog.api</a>
+</li>
+        <li><a href="python2verilog.api.html#module-python2verilog.api.api">python2verilog.api.api</a>
+</li>
         <li><a href="python2verilog.backend.html#module-python2verilog.backend">python2verilog.backend</a>
 </li>
         <li><a href="python2verilog.backend.verilog.html#module-python2verilog.backend.verilog">python2verilog.backend.verilog</a>
@@ -358,8 +354,6 @@
         <li><a href="python2verilog.backend.verilog.html#module-python2verilog.backend.verilog.ast">python2verilog.backend.verilog.ast</a>
 </li>
         <li><a href="python2verilog.backend.verilog.html#module-python2verilog.backend.verilog.codegen">python2verilog.backend.verilog.codegen</a>
-</li>
-        <li><a href="python2verilog.html#module-python2verilog.convert">python2verilog.convert</a>
 </li>
         <li><a href="python2verilog.frontend.html#module-python2verilog.frontend">python2verilog.frontend</a>
 </li>
@@ -378,8 +372,6 @@
         <li><a href="python2verilog.ir.html#module-python2verilog.ir.statements">python2verilog.ir.statements</a>
 </li>
         <li><a href="python2verilog.optimizer.html#module-python2verilog.optimizer">python2verilog.optimizer</a>
-</li>
-        <li><a href="python2verilog.optimizer.html#module-python2verilog.optimizer.basic">python2verilog.optimizer.basic</a>
 </li>
         <li><a href="python2verilog.optimizer.html#module-python2verilog.optimizer.graph">python2verilog.optimizer.graph</a>
 </li>
@@ -440,8 +432,6 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.IfElseNode.optimal_true_edge">optimal_true_edge (IfElseNode property)</a>
 </li>
-      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.basic.optimize_if">optimize_if() (in module python2verilog.optimizer.basic)</a>
-</li>
       <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.graph.OptimizeGraph">OptimizeGraph (class in python2verilog.optimizer.graph)</a>
 </li>
   </ul></td>
@@ -457,6 +447,20 @@
 
       <ul>
         <li><a href="python2verilog.html#module-python2verilog">module</a>
+</li>
+      </ul></li>
+      <li>
+    python2verilog.api
+
+      <ul>
+        <li><a href="python2verilog.api.html#module-python2verilog.api">module</a>
+</li>
+      </ul></li>
+      <li>
+    python2verilog.api.api
+
+      <ul>
+        <li><a href="python2verilog.api.html#module-python2verilog.api.api">module</a>
 </li>
       </ul></li>
       <li>
@@ -488,13 +492,6 @@
 </li>
       </ul></li>
       <li>
-    python2verilog.convert
-
-      <ul>
-        <li><a href="python2verilog.html#module-python2verilog.convert">module</a>
-</li>
-      </ul></li>
-      <li>
     python2verilog.frontend
 
       <ul>
@@ -515,6 +512,8 @@
         <li><a href="python2verilog.frontend.html#module-python2verilog.frontend.generator_parser">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     python2verilog.ir
 
@@ -522,8 +521,6 @@
         <li><a href="python2verilog.ir.html#module-python2verilog.ir">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     python2verilog.ir.context
 
@@ -560,13 +557,6 @@
 </li>
       </ul></li>
       <li>
-    python2verilog.optimizer.basic
-
-      <ul>
-        <li><a href="python2verilog.optimizer.html#module-python2verilog.optimizer.basic">module</a>
-</li>
-      </ul></li>
-      <li>
     python2verilog.optimizer.graph
 
       <ul>
@@ -600,14 +590,12 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.basic.remove_unreferenced_states">remove_unreferenced_states() (in module python2verilog.optimizer.basic)</a>
-</li>
       <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2graph.Generator2Graph.results">results (Generator2Graph property)</a>
+</li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.BinOp.right">right (BinOp property)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.BinOp.right">right (BinOp property)</a>
-</li>
       <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2graph.Generator2Graph.root">root (Generator2Graph property)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.AssignNode.rvalue">rvalue (AssignNode property)</a>
