--- a/genindex.html
+++ b/genindex.html
@@ -219,11 +219,7 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator_parser.Generator2List.generate_verilog">generate_verilog() (Generator2List method)</a>
-</li>
       <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2graph.Generator2Graph">Generator2Graph (class in python2verilog.frontend.generator2graph)</a>
-</li>
-      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator_parser.Generator2List">Generator2List (class in python2verilog.frontend.generator_parser)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.BasicElement.get_all_children">get_all_children() (BasicElement method)</a>
 
@@ -235,16 +231,14 @@
       </ul></li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Statement.get_blocked_comment">get_blocked_comment() (Statement method)</a>
 </li>
-      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator_parser.Generator2List.get_context">get_context() (Generator2List method)</a>
-</li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Statement.get_inline_comment">get_inline_comment() (Statement method)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_lines">get_module_lines() (CodeGen method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_str">get_module_str() (CodeGen method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Edge.get_name">get_name() (Edge method)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.BasicElement.get_optimal_children">get_optimal_children() (BasicElement method)</a>
@@ -255,9 +249,7 @@
         <li><a href="python2verilog.ir.html#python2verilog.ir.graph.IfElseNode.get_optimal_children">(IfElseNode method)</a>
 </li>
       </ul></li>
-      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator_parser.Generator2List.get_results">get_results() (Generator2List method)</a>
-</li>
-      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator_parser.Generator2List.get_root">get_root() (Generator2List method)</a>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.global_vars">global_vars (Context attribute)</a>
 </li>
       <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.graph.graph_apply_mapping">graph_apply_mapping() (in module python2verilog.optimizer.graph)</a>
 </li>
@@ -289,13 +281,15 @@
 </li>
       <li><a href="python2verilog.utils.html#python2verilog.utils.string.Lines.indent">indent() (Lines method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.utils.html#python2verilog.utils.string.Indent.indentify">indentify() (Indent method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.utils.html#python2verilog.utils.string.Indent.indentor">indentor (Indent attribute)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Initial">Initial (class in python2verilog.backend.verilog.ast)</a>
+</li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.input_vars">input_vars (Context attribute)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Instantiation">Instantiation (class in python2verilog.backend.verilog.ast)</a>
 </li>
@@ -317,17 +311,9 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.LessThan">LessThan (class in python2verilog.ir.expressions)</a>
 </li>
-      <li><a href="python2verilog.utils.html#python2verilog.utils.string.Lines">Lines (class in python2verilog.utils.string)</a>
-</li>
-      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.list_build_case">list_build_case() (CodeGen static method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.list_build_case_item">list_build_case_item() (CodeGen static method)</a>
-</li>
-      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.list_build_expr">list_build_expr() (CodeGen static method)</a>
-</li>
-      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.list_build_stmt">list_build_stmt() (CodeGen static method)</a>
+      <li><a href="python2verilog.utils.html#python2verilog.utils.string.Lines">Lines (class in python2verilog.utils.string)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.AssignNode.lvalue">lvalue (AssignNode property)</a>
 </li>
@@ -358,8 +344,6 @@
         <li><a href="python2verilog.frontend.html#module-python2verilog.frontend">python2verilog.frontend</a>
 </li>
         <li><a href="python2verilog.frontend.html#module-python2verilog.frontend.generator2graph">python2verilog.frontend.generator2graph</a>
-</li>
-        <li><a href="python2verilog.frontend.html#module-python2verilog.frontend.generator_parser">python2verilog.frontend.generator_parser</a>
 </li>
         <li><a href="python2verilog.ir.html#module-python2verilog.ir">python2verilog.ir</a>
 </li>
@@ -396,8 +380,12 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Element.name">name (Element property)</a>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.name">name (Context attribute)</a>
+
+      <ul>
+        <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Element.name">(Element property)</a>
 </li>
+      </ul></li>
       <li><a href="python2verilog.utils.html#python2verilog.utils.string.Lines.nestify">nestify() (Lines static method)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder.new_caseitem">new_caseitem() (CaseBuilder method)</a>
@@ -433,6 +421,8 @@
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.IfElseNode.optimal_true_edge">optimal_true_edge (IfElseNode property)</a>
 </li>
       <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.graph.OptimizeGraph">OptimizeGraph (class in python2verilog.optimizer.graph)</a>
+</li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.output_vars">output_vars (Context attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -503,13 +493,6 @@
 
       <ul>
         <li><a href="python2verilog.frontend.html#module-python2verilog.frontend.generator2graph">module</a>
-</li>
-      </ul></li>
-      <li>
-    python2verilog.frontend.generator_parser
-
-      <ul>
-        <li><a href="python2verilog.frontend.html#module-python2verilog.frontend.generator_parser">module</a>
 </li>
       </ul></li>
   </ul></td>
@@ -608,16 +591,18 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.State">State (class in python2verilog.ir.expressions)</a>
 </li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.state_vars">state_vars (Context attribute)</a>
+</li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Statement">Statement (class in python2verilog.backend.verilog.ast)</a>
 
       <ul>
         <li><a href="python2verilog.ir.html#python2verilog.ir.statements.Statement">(class in python2verilog.ir.statements)</a>
 </li>
       </ul></li>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.statements.StateSubsitution">StateSubsitution (class in python2verilog.ir.statements)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.statements.StateSubsitution">StateSubsitution (class in python2verilog.ir.statements)</a>
+</li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.YieldNode.stmts">stmts (YieldNode property)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Sub">Sub (class in python2verilog.ir.expressions)</a>
@@ -725,8 +710,6 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.statements.WhileWrapper">WhileWrapper (class in python2verilog.ir.statements)</a>
-</li>
-      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator_parser.Generator2List.wow_counter">wow_counter (Generator2List attribute)</a>
 </li>
   </ul></td>
 </tr></table>
