--- a/_modules/python2verilog/backend/verilog/ast.html
+++ b/_modules/python2verilog/backend/verilog/ast.html
@@ -56,6 +56,9 @@
         <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">expr</span> <span class="o">=</span> <span class="n">expr</span>
 
+    <span class="k">def</span> <span class="fm">__str__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">to_string</span><span class="p">()</span>
+
 <div class="viewcode-block" id="Expression.to_string"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Expression.to_string">[docs]</a>    <span class="k">def</span> <span class="nf">to_string</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        To Verilog</span>
@@ -125,6 +128,15 @@
         <span class="k">for</span> <span class="n">line</span> <span class="ow">in</span> <span class="n">actual_lines</span><span class="p">:</span>
             <span class="n">lines</span> <span class="o">+=</span> <span class="sa">f</span><span class="s2">&quot;// </span><span class="si">{</span><span class="n">line</span><span class="si">}</span><span class="s2">&quot;</span>
         <span class="k">return</span> <span class="n">lines</span></div></div>
+
+
+<div class="viewcode-block" id="LocalParam"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.LocalParam">[docs]</a><span class="k">class</span> <span class="nc">LocalParam</span><span class="p">(</span><span class="n">Statement</span><span class="p">):</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    localparam &lt;name&gt; = &lt;value&gt;;</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">value</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
+        <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;localparam </span><span class="si">{</span><span class="n">name</span><span class="si">}</span><span class="s2"> = </span><span class="si">{</span><span class="n">value</span><span class="si">}</span><span class="s2">;&quot;</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span></div>
 
 
 <div class="viewcode-block" id="AtPosedgeStatement"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.AtPosedgeStatement">[docs]</a><span class="k">class</span> <span class="nc">AtPosedgeStatement</span><span class="p">(</span><span class="n">Statement</span><span class="p">):</span>
@@ -199,6 +211,7 @@
         <span class="n">outputs</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span>
         <span class="n">body</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">list</span><span class="p">[</span><span class="n">Statement</span><span class="p">]]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
         <span class="n">add_default_ports</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+        <span class="n">localparams</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">str</span><span class="p">]]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
     <span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">name</span> <span class="o">=</span> <span class="n">name</span>  <span class="c1"># TODO: assert invalid names</span>
 
@@ -227,6 +240,14 @@
         <span class="k">else</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">body</span> <span class="o">=</span> <span class="p">[]</span>
 
+        <span class="k">if</span> <span class="n">localparams</span><span class="p">:</span>
+            <span class="n">assert_dict_type</span><span class="p">(</span><span class="n">localparams</span><span class="p">,</span> <span class="nb">str</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">local_params</span> <span class="o">=</span> <span class="n">Lines</span><span class="p">()</span>
+            <span class="k">for</span> <span class="n">key</span><span class="p">,</span> <span class="n">value</span> <span class="ow">in</span> <span class="n">localparams</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">local_params</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="n">LocalParam</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="n">value</span><span class="p">)</span><span class="o">.</span><span class="n">to_lines</span><span class="p">())</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">local_params</span> <span class="o">=</span> <span class="n">Lines</span><span class="p">()</span>
+
 <div class="viewcode-block" id="Module.to_lines"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Module.to_lines">[docs]</a>    <span class="k">def</span> <span class="nf">to_lines</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        To Verilog</span>
@@ -240,6 +261,7 @@
         <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">lines</span><span class="p">)</span> <span class="o">&gt;</span> <span class="mi">1</span><span class="p">:</span>  <span class="c1"># This means there are ports</span>
             <span class="n">lines</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="o">=</span> <span class="n">lines</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">][</span><span class="mi">0</span><span class="p">:</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span>  <span class="c1"># removes last comma</span>
         <span class="n">lines</span> <span class="o">+=</span> <span class="s2">&quot;);&quot;</span>
+        <span class="n">lines</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">local_params</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">stmt</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">body</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">stmt</span><span class="o">.</span><span class="n">to_lines</span><span class="p">()</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
                 <span class="n">warnings</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="nb">type</span><span class="p">(</span><span class="n">stmt</span><span class="p">))</span>
@@ -508,19 +530,7 @@
         <span class="k">for</span> <span class="n">stmt</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">else_body</span><span class="p">:</span>
             <span class="n">lines</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="n">stmt</span><span class="o">.</span><span class="n">to_lines</span><span class="p">(),</span> <span class="n">indent</span><span class="o">=</span><span class="mi">1</span><span class="p">)</span>
         <span class="n">lines</span> <span class="o">+=</span> <span class="s2">&quot;end&quot;</span>
-        <span class="k">return</span> <span class="n">lines</span></div>
-
-<div class="viewcode-block" id="IfElse.append_end_statements"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.IfElse.append_end_statements">[docs]</a>    <span class="k">def</span> <span class="nf">append_end_statements</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">statements</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="n">Statement</span><span class="p">]):</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Appends statements to both branches</span>
-<span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">statements</span> <span class="o">=</span> <span class="n">assert_list_type</span><span class="p">(</span><span class="n">statements</span><span class="p">,</span> <span class="n">Statement</span><span class="p">)</span>
-        <span class="c1"># warnings.warn(&quot;appending &quot; + statements[0].to_string())</span>
-        <span class="c1"># if len(statements) &gt; 1:</span>
-        <span class="c1">#     warnings.warn(statements[1].to_string())</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">then_body</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span><span class="o">.</span><span class="n">append_end_statements</span><span class="p">(</span><span class="n">statements</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">else_body</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span><span class="o">.</span><span class="n">append_end_statements</span><span class="p">(</span><span class="n">statements</span><span class="p">)</span>
-        <span class="k">return</span> <span class="bp">self</span></div></div>
+        <span class="k">return</span> <span class="n">lines</span></div></div>
 
 
 <div class="viewcode-block" id="While"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.While">[docs]</a><span class="k">class</span> <span class="nc">While</span><span class="p">(</span><span class="n">Statement</span><span class="p">):</span>
