--- a/_modules/python2verilog/frontend/generator2graph.html
+++ b/_modules/python2verilog/frontend/generator2graph.html
@@ -42,6 +42,8 @@
 <span class="kn">from</span> <span class="nn">..utils.string</span> <span class="kn">import</span> <span class="n">Lines</span><span class="p">,</span> <span class="n">Indent</span>
 <span class="kn">from</span> <span class="nn">..utils.assertions</span> <span class="kn">import</span> <span class="n">assert_type</span><span class="p">,</span> <span class="n">assert_list_type</span>
 
+<span class="n">DONE_STATE_NAME</span> <span class="o">=</span> <span class="s2">&quot;_statelmaodone&quot;</span>
+
 
 <div class="viewcode-block" id="Generator2Graph"><a class="viewcode-back" href="../../../python2verilog.frontend.html#python2verilog.frontend.generator2graph.Generator2Graph">[docs]</a><span class="k">class</span> <span class="nc">Generator2Graph</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
@@ -63,10 +65,10 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">_root</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">__parse_statements</span><span class="p">(</span>
             <span class="n">stmts</span><span class="o">=</span><span class="nb">list</span><span class="p">(</span><span class="n">python_func</span><span class="o">.</span><span class="n">body</span><span class="p">),</span>
             <span class="n">prefix</span><span class="o">=</span><span class="s2">&quot;&quot;</span><span class="p">,</span>
-            <span class="n">nextt</span><span class="o">=</span><span class="n">ir</span><span class="o">.</span><span class="n">DoneNode</span><span class="p">(</span><span class="n">unique_id</span><span class="o">=</span><span class="s2">&quot;_statelmaodone&quot;</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="s2">&quot;done&quot;</span><span class="p">),</span>
+            <span class="n">nextt</span><span class="o">=</span><span class="n">ir</span><span class="o">.</span><span class="n">DoneNode</span><span class="p">(</span><span class="n">unique_id</span><span class="o">=</span><span class="n">DONE_STATE_NAME</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="s2">&quot;done&quot;</span><span class="p">),</span>
         <span class="p">)</span>
-        <span class="c1"># for i, var in enumerate(self._context.state_vars):</span>
-        <span class="c1">#     self.__add_global_var(str(i), var.to_string())</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_context</span><span class="o">.</span><span class="n">entry</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_root</span><span class="o">.</span><span class="n">unique_id</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_context</span><span class="o">.</span><span class="n">exit</span> <span class="o">=</span> <span class="n">DONE_STATE_NAME</span>
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">root</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
