deploy: 80c464941d84c4a850e1cbde7342183ec9186b6a

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -37,7 +37,7 @@
 <li><a href="python2verilog/ir/expressions.html">python2verilog.ir.expressions</a></li>
 <li><a href="python2verilog/ir/graph.html">python2verilog.ir.graph</a></li>
 <li><a href="python2verilog/ir/statements.html">python2verilog.ir.statements</a></li>
-<li><a href="python2verilog/optimizer/graph.html">python2verilog.optimizer.graph</a></li>
+<li><a href="python2verilog/optimizer/optimizer.html">python2verilog.optimizer.optimizer</a></li>
 <li><a href="python2verilog/utils/assertions.html">python2verilog.utils.assertions</a></li>
 <li><a href="python2verilog/utils/string.html">python2verilog.utils.string</a></li>
 </ul>
