--- a/genindex.html
+++ b/genindex.html
@@ -93,7 +93,7 @@
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.graph.backwards_replace">backwards_replace() (in module python2verilog.optimizer.graph)</a>
+      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.optimizer.backwards_replace">backwards_replace() (in module python2verilog.optimizer.optimizer)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.BasicElement">BasicElement (class in python2verilog.ir.graph)</a>
 </li>
@@ -185,11 +185,9 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Element">Element (class in python2verilog.ir.graph)</a>
 </li>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.entry">entry (Context attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.exit">exit (Context attribute)</a>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.entry">entry (Context attribute)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Expression">Expression (class in python2verilog.backend.verilog.ast)</a>
 
@@ -243,9 +241,9 @@
       </ul></li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.global_vars">global_vars (Context attribute)</a>
 </li>
-      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.graph.graph_apply_mapping">graph_apply_mapping() (in module python2verilog.optimizer.graph)</a>
+      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.optimizer.graph_apply_mapping">graph_apply_mapping() (in module python2verilog.optimizer.optimizer)</a>
 </li>
-      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.graph.graph_update_mapping">graph_update_mapping() (in module python2verilog.optimizer.graph)</a>
+      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.optimizer.graph_update_mapping">graph_update_mapping() (in module python2verilog.optimizer.optimizer)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -279,7 +277,7 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.is_declared">is_declared() (Context method)</a>
 </li>
-      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.graph.is_dependent">is_dependent() (in module python2verilog.optimizer.graph)</a>
+      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.optimizer.is_dependent">is_dependent() (in module python2verilog.optimizer.optimizer)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -339,7 +337,7 @@
 </li>
         <li><a href="python2verilog.optimizer.html#module-python2verilog.optimizer">python2verilog.optimizer</a>
 </li>
-        <li><a href="python2verilog.optimizer.html#module-python2verilog.optimizer.graph">python2verilog.optimizer.graph</a>
+        <li><a href="python2verilog.optimizer.html#module-python2verilog.optimizer.optimizer">python2verilog.optimizer.optimizer</a>
 </li>
         <li><a href="python2verilog.utils.html#module-python2verilog.utils">python2verilog.utils</a>
 </li>
@@ -402,7 +400,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.IfElseNode.optimal_true_edge">optimal_true_edge (IfElseNode property)</a>
 </li>
-      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.graph.OptimizeGraph">OptimizeGraph (class in python2verilog.optimizer.graph)</a>
+      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.optimizer.OptimizeGraph">OptimizeGraph (class in python2verilog.optimizer.optimizer)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.output_vars">output_vars (Context attribute)</a>
 </li>
@@ -522,10 +520,10 @@
 </li>
       </ul></li>
       <li>
-    python2verilog.optimizer.graph
+    python2verilog.optimizer.optimizer
 
       <ul>
-        <li><a href="python2verilog.optimizer.html#module-python2verilog.optimizer.graph">module</a>
+        <li><a href="python2verilog.optimizer.html#module-python2verilog.optimizer.optimizer">module</a>
 </li>
       </ul></li>
       <li>
@@ -555,12 +553,14 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2graph.Generator2Graph.results">results (Generator2Graph property)</a>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.ready">ready (Context attribute)</a>
 </li>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.BinOp.right">right (BinOp property)</a>
+      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2graph.Generator2Graph.results">results (Generator2Graph property)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.BinOp.right">right (BinOp property)</a>
+</li>
       <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2graph.Generator2Graph.root">root (Generator2Graph property)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.AssignNode.rvalue">rvalue (AssignNode property)</a>
@@ -661,7 +661,7 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.graph.OptimizeGraph.unique_counter">unique_counter (OptimizeGraph attribute)</a>
+      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.optimizer.OptimizeGraph.unique_counter">unique_counter (OptimizeGraph attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
