--- a/_modules/python2verilog/backend/verilog/ast.html
+++ b/_modules/python2verilog/backend/verilog/ast.html
@@ -222,6 +222,7 @@
         <span class="k">if</span> <span class="n">add_default_ports</span><span class="p">:</span>
             <span class="n">input_lines</span> <span class="o">+=</span> <span class="s2">&quot;input wire _start&quot;</span>
             <span class="n">input_lines</span> <span class="o">+=</span> <span class="s2">&quot;input wire _clock&quot;</span>
+            <span class="n">input_lines</span> <span class="o">+=</span> <span class="s2">&quot;input wire _reset&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">input</span> <span class="o">=</span> <span class="n">input_lines</span>
 
         <span class="n">output_lines</span> <span class="o">=</span> <span class="n">Lines</span><span class="p">()</span>
@@ -229,7 +230,7 @@
             <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">output</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
             <span class="n">output_lines</span> <span class="o">+=</span> <span class="sa">f</span><span class="s2">&quot;output reg signed [31:0] </span><span class="si">{</span><span class="n">output</span><span class="si">}</span><span class="s2">&quot;</span>
         <span class="k">if</span> <span class="n">add_default_ports</span><span class="p">:</span>
-            <span class="n">output_lines</span> <span class="o">+=</span> <span class="s2">&quot;output reg _done&quot;</span>
+            <span class="n">output_lines</span> <span class="o">+=</span> <span class="s2">&quot;output reg _ready&quot;</span>
             <span class="n">output_lines</span> <span class="o">+=</span> <span class="s2">&quot;output reg _valid&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">output</span> <span class="o">=</span> <span class="n">output_lines</span>
 
@@ -303,17 +304,10 @@
         <span class="n">trigger</span><span class="p">:</span> <span class="n">Expression</span><span class="p">,</span>
         <span class="o">*</span><span class="n">args</span><span class="p">,</span>
         <span class="n">body</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">list</span><span class="p">[</span><span class="n">Statement</span><span class="p">]]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
-        <span class="n">valid</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
         <span class="o">**</span><span class="n">kwargs</span><span class="p">,</span>
     <span class="p">):</span>
         <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">trigger</span><span class="p">,</span> <span class="n">Expression</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">trigger</span> <span class="o">=</span> <span class="n">trigger</span>
-        <span class="k">if</span> <span class="n">valid</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">valid</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">NonBlockingSubsitution</span><span class="p">]</span> <span class="o">=</span> <span class="n">NonBlockingSubsitution</span><span class="p">(</span>
-                <span class="n">valid</span><span class="p">,</span> <span class="s2">&quot;0&quot;</span>
-            <span class="p">)</span>
-        <span class="k">else</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">valid</span> <span class="o">=</span> <span class="kc">None</span>
         <span class="k">if</span> <span class="n">body</span><span class="p">:</span>
             <span class="k">for</span> <span class="n">stmt</span> <span class="ow">in</span> <span class="n">body</span><span class="p">:</span>
                 <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">stmt</span><span class="p">,</span> <span class="n">Statement</span><span class="p">)</span>
@@ -327,9 +321,6 @@
 <span class="sd">        To Verilog</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">lines</span> <span class="o">=</span> <span class="n">Lines</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;always </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">trigger</span><span class="o">.</span><span class="n">to_string</span><span class="p">()</span><span class="si">}</span><span class="s2"> begin&quot;</span><span class="p">)</span>
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">valid</span><span class="p">:</span>
-            <span class="n">lines</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">valid</span><span class="o">.</span><span class="n">to_lines</span><span class="p">(),</span> <span class="mi">1</span><span class="p">)</span>
-        <span class="n">lines</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="n">NonBlockingSubsitution</span><span class="p">(</span><span class="s2">&quot;_done&quot;</span><span class="p">,</span> <span class="s2">&quot;0&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">to_lines</span><span class="p">(),</span> <span class="mi">1</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">stmt</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">body</span><span class="p">:</span>
             <span class="n">lines</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="n">stmt</span><span class="o">.</span><span class="n">to_lines</span><span class="p">(),</span> <span class="mi">1</span><span class="p">)</span>
         <span class="n">lines</span> <span class="o">+=</span> <span class="s2">&quot;end&quot;</span>
@@ -511,7 +502,7 @@
         <span class="bp">self</span><span class="p">,</span>
         <span class="n">condition</span><span class="p">:</span> <span class="n">Expression</span><span class="p">,</span>
         <span class="n">then_body</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="n">Statement</span><span class="p">],</span>
-        <span class="n">else_body</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="n">Statement</span><span class="p">],</span>
+        <span class="n">else_body</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">list</span><span class="p">[</span><span class="n">Statement</span><span class="p">]],</span>
         <span class="o">*</span><span class="n">args</span><span class="p">,</span>
         <span class="o">**</span><span class="n">kwargs</span><span class="p">,</span>
     <span class="p">):</span>
@@ -526,9 +517,10 @@
         <span class="n">lines</span> <span class="o">+=</span> <span class="sa">f</span><span class="s2">&quot;if (</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">condition</span><span class="o">.</span><span class="n">to_string</span><span class="p">()</span><span class="si">}</span><span class="s2">) begin&quot;</span>
         <span class="k">for</span> <span class="n">stmt</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">then_body</span><span class="p">:</span>
             <span class="n">lines</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="n">stmt</span><span class="o">.</span><span class="n">to_lines</span><span class="p">(),</span> <span class="n">indent</span><span class="o">=</span><span class="mi">1</span><span class="p">)</span>
-        <span class="n">lines</span> <span class="o">+=</span> <span class="s2">&quot;end else begin&quot;</span>
-        <span class="k">for</span> <span class="n">stmt</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">else_body</span><span class="p">:</span>
-            <span class="n">lines</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="n">stmt</span><span class="o">.</span><span class="n">to_lines</span><span class="p">(),</span> <span class="n">indent</span><span class="o">=</span><span class="mi">1</span><span class="p">)</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">else_body</span><span class="p">:</span>
+            <span class="n">lines</span> <span class="o">+=</span> <span class="s2">&quot;end else begin&quot;</span>
+            <span class="k">for</span> <span class="n">stmt</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">else_body</span><span class="p">:</span>
+                <span class="n">lines</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="n">stmt</span><span class="o">.</span><span class="n">to_lines</span><span class="p">(),</span> <span class="n">indent</span><span class="o">=</span><span class="mi">1</span><span class="p">)</span>
         <span class="n">lines</span> <span class="o">+=</span> <span class="s2">&quot;end&quot;</span>
         <span class="k">return</span> <span class="n">lines</span></div></div>
 
