--- a/_modules/python2verilog/frontend/generator2graph.html
+++ b/_modules/python2verilog/frontend/generator2graph.html
@@ -42,7 +42,7 @@
 <span class="kn">from</span> <span class="nn">..utils.string</span> <span class="kn">import</span> <span class="n">Lines</span><span class="p">,</span> <span class="n">Indent</span>
 <span class="kn">from</span> <span class="nn">..utils.assertions</span> <span class="kn">import</span> <span class="n">assert_type</span><span class="p">,</span> <span class="n">assert_list_type</span>
 
-<span class="n">DONE_STATE_NAME</span> <span class="o">=</span> <span class="s2">&quot;_statelmaodone&quot;</span>
+<span class="n">DONE_STATE_NAME</span> <span class="o">=</span> <span class="s2">&quot;_statelmaoready&quot;</span>
 
 
 <div class="viewcode-block" id="Generator2Graph"><a class="viewcode-back" href="../../../python2verilog.frontend.html#python2verilog.frontend.generator2graph.Generator2Graph">[docs]</a><span class="k">class</span> <span class="nc">Generator2Graph</span><span class="p">:</span>
@@ -68,7 +68,7 @@
             <span class="n">nextt</span><span class="o">=</span><span class="n">ir</span><span class="o">.</span><span class="n">DoneNode</span><span class="p">(</span><span class="n">unique_id</span><span class="o">=</span><span class="n">DONE_STATE_NAME</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="s2">&quot;done&quot;</span><span class="p">),</span>
         <span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_context</span><span class="o">.</span><span class="n">entry</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_root</span><span class="o">.</span><span class="n">unique_id</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_context</span><span class="o">.</span><span class="n">exit</span> <span class="o">=</span> <span class="n">DONE_STATE_NAME</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_context</span><span class="o">.</span><span class="n">ready</span> <span class="o">=</span> <span class="n">DONE_STATE_NAME</span>
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">root</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
